# forked-roundcube-mcp

./: .gitignore  README.md  config.json.example  list_folders.py  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  email_service.py  server.py
